[package]
name = "focus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.18", features = ["derive"] }
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
lazy-regex = "3.3.0"
libc = "0.2.161"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
utmpx = "0.2.0"
