[package]
name = "keep-it-focused"
version = "0.5.1"
edition = "2021"

[lib]

[[bin]]
name = "keep-it-focused"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["as_ref", "full"] }
globset = { version = "0.4.15", features = ["serde", "serde1", "simd-accel"] }
itertools = "0.13.0"
kill_tree = "0.2.4"
lazy-regex = "3.3.0"
libc = "0.2.168"
log = "0.4.22"
procfs = "0.17.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["rc", "serde_derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
systemd-journal-logger = "2.2.0"
typed-builder = "0.20.0"
uucore = { version = "0.0.27", features = ["entries"] }

[features]
# If enabled, setup iptables to reject specific IPs.
ip_tables = []
